--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="C:\Users\Raunak Sen\Downloads\html5up-miniport\raunaksen.github.io\images\pic00.jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1> Hi! <strong>I am Raunak Sen  </strong>.</h1>
+								<h1> Hi! <strong><img src="C:\Users\Raunak Sen\Downloads\html5up-miniport\raunaksen.github.io\images\data-center.gif" alt="Your GIF Description">
+								</strong></h1>
 							</header>
-							<p></a> Data Science student from IIT Madras BS. and I am a recent graduate in Electrical Engineering with a passion for data science.I have always been interested in using data to understand and solve complex problems, and I believe that data science has the potential to make a positive impact in a wide range of industries.</a>I am excited to apply my knowledge </a>and drive to make an impact,for success in future endeavors.</a> </p>
-							<a href="#work" class="button large scrolly">Explore More  </a>
+							<p></a>👋 I'm Raunak Sen
+								🌱Data enthusiast | Electrical Engineering graduate | Harnessing insights from data | Driven to make an impact
+								📚 Currently, I'm pursuing further education in Data Science to expand my skills and knowledge in this exciting field. I am passionate about exploring data, uncovering insights, and applying machine learning algorithms to solve real-world problems.
+								💡 I enjoy working on data-driven projects and tinkering with different technologies and tools.																	
+								</a></a> </a>--Top skills--
+								• Data Analysis • Mathematical Statistics • Probability • Statistical Inference </p>
+							<a href="#work" class="button large scrolly">Scroll Down  </a>
 						</div>
 					</div>
 				</div>
@@ -45,38 +51,72 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>"Works and Projects"</h2>
-						<p>---------(Personal)---------</p>
+						<h2>"Experience and Projects"</h2>
+						<p>-------------------------</p>
 					</header>
 					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Chatbot Using Python</h3>
-								<p>.......</p>
+						<div class="">
+							<section class="">
+								<span class=""></span>
+								<h3>Global Analyst</h3>
+								<p>Prescouters,Inc.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3> Pothole Detection System Using Machine Learning and Computer Vision</h3>
-								<p>Project involves object detection, in the form of pot holes to tone down traffic accidents. Project going on</p>
+							<section class="">
+								<span class=""></span>
+								<h3>Electrical Engineering Winter Trainee</h3>
+								<p>Damodar Valley Corporation</p>
 							</section>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Social Media Sentiment Analysis</h3>
-								<p> Extracting sentiment from social media posts to gain insights on public opinion, brand perception, and customer feedback.</p>
+						<div class="">
+							<section class="">
+								<span class=""></span>
+								<h3> 
+									Maximum Power Point Tracking of Partially Shaded Photovoltaic Cells</h3>
+								<p>Associated with Maulana Abul Kalam Azad University of Technology, West Bengal formerly WBUT
+									#Software Used: MATLAB & Simulink</p>
 							</section>
 						</div>
 					</div>
 					<footer>
 						<p></p>
-						<a href="#portfolio" class="button large scrolly">See More Projects</a>
+						<a href="#portfolio" class="button large scrolly">Education</a>
 					</footer>
 				</div>
 			</article>
+		<!-- EDUCATION -->
+		<article id="Education" class="wrapper style2">
+			<div class="container">
+				<header>
+					<h2>"Education"</h2>
+					<p>-------------------------</p>
+				</header>
+				<div class="row aln-center">
+					<div class="">
+						<section class="">
+							<span class=""></span>
+							<h3>BS(Data Science and Applications)</h3>
+							<p>Indian Institute of Technology, Madras</p>
+						</section>
+					</div>
+					<div class="col-4 col-6-medium col-12-small">
+						<section class="">
+							<span class=""></span>
+							<h3>B.Tech(Electrical Engineering) </h3>
+							<p>Maulana Abul Kalam Azad University of Technology,West Bengal</p>
+						</section>
+					</div>
+					
+					</div>
+				</div>
+				<footer>
+					<p></p>
+					<a href="#portfolio" class="button large scrolly">See More Projects</a>
+				</footer>
+			</div>
+		</article>
+
 
 		<!-- Portfolio -->
 			<article id="portfolio" class="wrapper style3">
@@ -175,7 +215,7 @@
 								<li><a href="https://twitter.com/RSOfficial_6" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/raunak.sen.eeds/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://sites.google.com/view/raunaksen-r/home" class="icon brands fa-dribbble"><span class="label">google</span></a></li>
-								<li><a href="linkedin.com/in/raunak-sen-eeds" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/raunak-sen-eeds/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://twitter.com/RSOfficial_6" class="icon brands fa-tumblr"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/RaunakSen-EE" class="icon brands fa-github"><span class="label">Github</span></a></li>
