--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="C:\Users\Raunak Sen\Downloads\html5up-miniport\images\pic002.jpg" alt="" /></span>
+							<span class="image fit"><img src="C:\Users\Raunak Sen\Downloads\html5up-miniport\images\pic002.JPG" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1> Hi! <strong><img src="C:\Users\Raunak Sen\Downloads\html5up-miniport\raunaksen.github.io\images\data-center.gif" alt="">
+								<h1> Hi! <strong><img src="C:\Users\Raunak Sen\Downloads\html5up-miniport\raunaksen.github.io\images\data-center.GIF" alt="">
 								</strong></h1>
 							</header>
 							<p></a>👋 I'm Raunak Sen
