--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="https://github.com/RaunakSen-EE/portfolio_raunak/blob/main/images/DALL%C2%B7E%202023-04-04%2011.44.09%20-%20black%20background%20with%20circuits.jpg" alt="" /></span>
+							<span class="image fit"><img src="https://github.com/RaunakSen-EE/portfolio_raunak/blob/main/images/60d35967a853a1b14851703b_All%20the%20data%20(1).gif" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1> Hi! <strong><img src="https://www.pinterest.com/pin/311381761730704419/" alt="">
+								<h1> Hi! <strong><img src="https://github.com/RaunakSen-EE/portfolio_raunak/blob/main/images/data-center.gif" alt="">
 								</strong></h1>
 							</header>
 							<p></a>👋 I'm Raunak Sen
