--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1> Hi! <strong><img src="C:\Users\Raunak Sen\Downloads\html5up-miniport\raunaksen.github.io\images\data-center.gif" alt="">
+								<h1> Hi! <strong><img src="https://www.behance.net/gallery/62225981/IBM-Financial-data-analytics/modules/365288645" alt="">
 								</strong></h1>
 							</header>
 							<p></a>👋 I'm Raunak Sen
