--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="https://github.com/RaunakSen-EE/portfolio_raunak/blob/main/images/60d35967a853a1b14851703b_All%20the%20data%20(1).gif" alt="" /></span>
+							<span class="image fit"><img src="https://github.com/RaunakSen-EE/portfolio_raunak/blob/main/images/pic00.jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
