--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1> Hi! There <strong><img src="https://mir-s3-cdn-cf.behance.net/project_modules/hd/699e4762225981.5a89af14d87a9.gif" alt="">
+								<h1>  <strong><img src="https://mir-s3-cdn-cf.behance.net/project_modules/hd/699e4762225981.5a89af14d87a9.gif" alt="">
 								</strong></h1>
 							</header>
 							<p></a>👋 I'm Raunak Sen
