--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>  <strong><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F311381761730704419%2F&psig=AOvVaw0Hy3yO7ysZkgiAklOfIaZw&ust=1691667154203000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCJjnobC9z4ADFQAAAAAdAAAAABAE" alt="">
+								<h1> Hi! There <strong><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F311381761730704419%2F&psig=AOvVaw0Hy3yO7ysZkgiAklOfIaZw&ust=1691667154203000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCJjnobC9z4ADFQAAAAAdAAAAABAE" alt="">
 								</strong></h1>
 							</header>
 							<p></a>👋 I'm Raunak Sen
