--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>  <strong><img src="https://i.pinimg.com/originals/fc/71/63/fc71635c7f1b09ed30413f59bb749582.gif" alt="">
+								<h1>  <strong><img src="https://www.esds.co.in/assets/images/data-center/data-center.gif" alt="">
 								</strong></h1>
 							</header>
 							<p></a>👋 I'm Raunak Sen
