--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
 					<div class="">
 						<section class="">
 							<span class=""></span>
-							<h3>BS(Data Science and Applications)</h3>
+							<h3>Data Science and Applications</h3>
 							<p>Indian Institute of Technology, Madras</p>
 						</section>
 					</div>
 					<div class="col-4 col-6-medium col-12-small">
 						<section class="">
 							<span class=""></span>
-							<h3>B.Tech(Electrical Engineering) </h3>
+							<h3>Electrical Engineering </h3>
 							<p>Maulana Abul Kalam Azad University of Technology,West Bengal</p>
 						</section>
 					</div>
