--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="https://s3.us-west-2.amazonaws.com/linquip.profile/profile/6520/KmuzDMAzKu77SRJ8NjqcyXo9uLHCxM30.jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
