--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
 						<div class="">
 							<section class="">
 								<span class=""></span>
-								<h3>Global Analyst</h3>
-								<p>Prescouters,Inc.</p>
+								<h3>BRAIN Research Consultant</h3>
+								<p>WorldQuant</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="">
 								<span class=""></span>
-								<h3>Electrical Engineering Winter Trainee</h3>
-								<p>Damodar Valley Corporation</p>
+								<h3>Global Analyst</h3>
+								<p>Prescouters,Inc.</p>
 							</section>
 						</div>
 						<div class="">
@@ -76,6 +76,17 @@
 									Maximum Power Point Tracking of Partially Shaded Photovoltaic Cells</h3>
 								<p>Associated with Maulana Abul Kalam Azad University of Technology, West Bengal formerly WBUT
 									#Software Used: MATLAB & Simulink</p>
+							</section>
+						</div>
+						<div class="">
+							<section class="">
+								<span class=""></span>
+								<h3> 
+									
+Customer Satisfaction and Sales Maximization of Royal Kitchen & Caterer (A Food Restaurant)Customer Satisfaction and Sales Maximization of Royal Kitchen & Caterer (A Food Restaurant)
+</h3>
+								<p>Associated with Indian Institute of Technology Madras
+									</p>
 							</section>
 						</div>
 					</div>
