--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								<span class=""></span>
 								<h3> 
 									
-Customer Satisfaction and Sales Maximization of Royal Kitchen & Caterer (A Food Restaurant)Customer Satisfaction and Sales Maximization of Royal Kitchen & Caterer (A Food Restaurant)
+Customer Satisfaction and Sales Maximization of Royal Kitchen & Caterer (A Food Restaurant)
 </h3>
 								<p>Associated with Indian Institute of Technology Madras
 									</p>
