--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<span class=""></span>
 								<h3> 
 									
-Customer Satisfaction and Sales Maximization of Royal Kitchen & Caterer (A Food Restaurant) - Business Data Management Project
+Customer Satisfaction and Sales Maximization of Royal Kitchen & Caterer (A Food Restaurant) - Business Data Management 
 </h3>
 								<p>Associated with Indian Institute of Technology Madras
 									</p>
