--- a/index.html
+++ b/index.html
@@ -35,10 +35,18 @@
 								<h1>  <strong><img src="https://www.esds.co.in/assets/images/data-center/data-center.gif" alt="">
 								</strong></h1>
 							</header>
-							<p></a>👋 I'm Raunak Sen
-								🌱Data enthusiast | Electrical Engineering graduate | Harnessing insights from data | Driven to make an impact
-								📚 Currently, I'm pursuing further education in Data Science to expand my skills and knowledge in this exciting field. I am passionate about exploring data, uncovering insights, and applying machine learning algorithms to solve real-world problems.
-								💡 I enjoy working on data-driven projects and tinkering with different technologies and tools.																	
+							<p></a>As a fervent data enthusiast, I'm on a relentless quest to unravel the stories hidden within vast streams of data. With a foundation rooted in Electrical Engineering and a penchant for problem-solving, I have embarked on a journey to master the intricacies of Data Science, driven by an insatiable curiosity and a relentless pursuit of knowledge.
+My journey began with a fascination for the power of data to illuminate patterns, trends, and insights that lie beneath the surface. Armed with a deep understanding of mathematical statistics, probability theory, and statistical inference, I delve into datasets with a keen eye for detail and a thirst for discovery.
+
+As a fervent data enthusiast and aspiring data scientist, I'm on a relentless quest to unravel the stories hidden within vast streams of data. With a foundation rooted in Electrical Engineering and a penchant for problem-solving, I have embarked on a journey to master the intricacies of Data Science, driven by an insatiable curiosity and a relentless pursuit of knowledge.
+
+My journey began with a fascination for the power of data to illuminate patterns, trends, and insights that lie beneath the surface. Armed with a deep understanding of mathematical statistics, probability theory, and statistical inference, I delve into datasets with a keen eye for detail and a thirst for discovery.
+
+In my pursuit of excellence, I am currently expanding my horizons through further education in Data Science, seeking to augment my skills and expertise in this dynamic field. I am drawn to the endless possibilities that data presents, eager to harness its potential to solve real-world problems and drive meaningful change.
+
+With a toolbox brimming with top-notch skills in data analysis and a penchant for storytelling, I relish the opportunity to breathe life into data, weaving compelling narratives that captivate and enlighten. Whether it's unraveling the mysteries of complex datasets or applying machine learning algorithms to extract actionable insights, I thrive on the challenge of translating raw data into tangible solutions.
+
+Fuelled by a passion for exploration and a hunger for innovation, I immerse myself in data-driven projects, constantly pushing the boundaries of what's possible. From tinkering with cutting-edge technologies to experimenting with a myriad of tools, I am always on the lookout for new avenues to elevate my craft and make a meaningful impact.																	
 								</a></a> </a>--Top skills--
 								• Data Analysis • Mathematical Statistics • Probability • Statistical Inference </p>
 							<a href="#work" class="button large scrolly">Scroll Down  </a>
