--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
 								<h1>  <strong><img src="https://www.esds.co.in/assets/images/data-center/data-center.gif" alt="">
 								</strong></h1>
 							</header>
-							<p></a>As a fervent data enthusiast, I'm on a relentless quest to unravel the stories hidden within vast streams of data. With a foundation rooted in Electrical Engineering and a penchant for problem-solving, I have embarked on a journey to master the intricacies of Data Science, driven by an insatiable curiosity and a relentless pursuit of knowledge.
-My journey began with a fascination for the power of data to illuminate patterns, trends, and insights that lie beneath the surface. Armed with a deep understanding of mathematical statistics, probability theory, and statistical inference, I delve into datasets with a keen eye for detail and a thirst for discovery.
+							<p></a>💫 About Me:
+<br>🌱 Data enthusiast | Electrical Engineering graduate | Harnessing insights from data | Driven to make an impact
+<br>📚 Currently, I'm pursuing further education in Data Science to expand my skills and knowledge in this exciting field. I am passionate about exploring data, uncovering insights, and applying machine learning algorithms to solve real-world problems.
+<br>💡 I enjoy working on data-driven projects and tinkering with different technologies and tools.
+<br>🔭 I’m currently working on PostgreSQL, Python, C, Java, JavaScript, CSS
+<br>📫 How to reach me raunaks.contact@gmail.com
+<br>👨‍💻 Available at https://raunaksen-ee.github.io/portfolio_raunak/
+<br>📄 Know about my experiences https://sites.google.com/view/raunaksen-r/home
+<br>⚡ Data Science Fun Poem In the world of data science, where numbers hold the key, A funny little poem, let me share with glee. Once upon a spreadsheet, in a land of algorithms, Data scientists worked, with their brains in rhythm. They danced with data, through the day and night, Finding insights hidden, oh what a sight! With Python and R, their trusty tools in hand, They wrangled datasets, like wizards so grand. They crunched the numbers, oh so many rows, Searching for patterns, as the data flows. But sometimes they stumbled upon quite a mess, Outliers and errors causing much distress. They battled with bugs, in their coding fight, Chasing down issues, 'til the code was right. And when models were built, they were put to test, Accuracy and precision, their ultimate quest. They built predictions, with machine learning grace, Forecasting the future, at a rapid pace. But amidst all the data and complex equations, They never forgot to have fun and celebrations. They joked about p-values and poked at their code, Laughing at errors and the stories they sowed. So here's to the data scientists, both wise and funny, Analyzing data, while making the world sunny. With a touch of humor and a sprinkle of glee, They blend science and laughter, in perfect harmony.
+<br>📫 You can connect with me on LinkedIn www.linkedin.com/in/raunak-sen-eeds to stay updated on my latest endeavors.
 
-As a fervent data enthusiast and aspiring data scientist, I'm on a relentless quest to unravel the stories hidden within vast streams of data. With a foundation rooted in Electrical Engineering and a penchant for problem-solving, I have embarked on a journey to master the intricacies of Data Science, driven by an insatiable curiosity and a relentless pursuit of knowledge.
-
-My journey began with a fascination for the power of data to illuminate patterns, trends, and insights that lie beneath the surface. Armed with a deep understanding of mathematical statistics, probability theory, and statistical inference, I delve into datasets with a keen eye for detail and a thirst for discovery.
-
-In my pursuit of excellence, I am currently expanding my horizons through further education in Data Science, seeking to augment my skills and expertise in this dynamic field. I am drawn to the endless possibilities that data presents, eager to harness its potential to solve real-world problems and drive meaningful change.
-
-With a toolbox brimming with top-notch skills in data analysis and a penchant for storytelling, I relish the opportunity to breathe life into data, weaving compelling narratives that captivate and enlighten. Whether it's unraveling the mysteries of complex datasets or applying machine learning algorithms to extract actionable insights, I thrive on the challenge of translating raw data into tangible solutions.
-
-Fuelled by a passion for exploration and a hunger for innovation, I immerse myself in data-driven projects, constantly pushing the boundaries of what's possible. From tinkering with cutting-edge technologies to experimenting with a myriad of tools, I am always on the lookout for new avenues to elevate my craft and make a meaningful impact.																	
+Let's harness the power of data together and create meaningful insights!																	
 								</a></a> </a>--Top skills--
 								• Data Analysis • Mathematical Statistics • Probability • Statistical Inference </p>
 							<a href="#work" class="button large scrolly">Scroll Down  </a>
